# ai_engineer

./: .gitignore  tempCodeRunnerFile.py
projects/email_operations/: README.md  email_operations.py  main.py  pyproject.toml
projects/email_operations/emails/: 01_meeting_request.txt  02_leave_request.txt  03_job_application.txt  04_invoice_reminder.txt  05_support_ticket.txt  06_order_confirmation.txt  07_interview_invitation.txt  08_meeting_minutes.txt  09_password_reset.txt  10_newsletter.txt
projects/email_operations/output/: 01_meeting_request.json  02_leave_request.json  03_job_application.json  04_invoice_reminder.json  05_support_ticket.json  06_order_confirmation.json  07_interview_invitation.json  08_meeting_minutes.json  09_password_reset.json  10_newsletter.json
projects/resume_parser/: README.md  pyproject.toml
projects/token_calculator/: pyproject.toml  token_calculator.py
week1/day1/: hello_llm.py  pyproject.toml
week1/day2/: pyproject.toml  sys.py  temperature.py
week1/day3/: pyproject.toml  tokens.py
week1/day4/: json_pydantic.py  pyproject.toml
week1/day5/: mini_project.py  pyproject.toml
week2/day5/: prompt_eng.py  pyproject.toml
week2/day6/: pyproject.toml  react_chain.py
