[project]
name = "day5"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "document>=1.0",
    "docx>=0.2.4",
    "groq>=1.5.0",
    "pdfreader>=0.1.15",
    "pydantic>=2.13.4",
    "pypdf>=6.14.2",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
]

[tool.uv.workspace]
members = [
    "venv",
]
